Rewrie to java 8