@@ -140,7 +140,7 @@ public class MapReducePipeline {
     private void loadQuery1(PostgresWriter w, int runId, Timestamp ts)
         throws Exception {
         for (String line : readHdfsLines(OUTPUT + "/query1/part-*")) {
-            if (line.isBlank()) continue;
+            if (line.trim().isEmpty()) continue;
             String[] p = line.split("\t", -1);
             if (p.length < 5) continue;
             w.insertQuery1(
@@ -161,7 +161,7 @@ public class MapReducePipeline {
         // Sort by count desc, take top 20
         List<String[]> rows = new ArrayList<>();
         for (String line : readHdfsLines(OUTPUT + "/query2/part-*")) {
-            if (line.isBlank()) continue;
+            if (line.trim().isEmpty()) continue;
             String[] p = line.split("\t", -1);
             if (p.length >= 5) rows.add(p);
         }
@@ -185,7 +185,7 @@ public class MapReducePipeline {
     private void loadQuery3(PostgresWriter w, int runId, Timestamp ts)
         throws Exception {
         for (String line : readHdfsLines(OUTPUT + "/query3/part-*")) {
-            if (line.isBlank()) continue;
+            if (line.trim().isEmpty()) continue;
             String[] p = line.split("\t", -1);
             if (p.length < 7) continue;
             w.insertQuery3(
@@ -264,7 +264,7 @@ public class MapReducePipeline {
             out = r.readLine();
         }
         p.waitFor();
-        return (out == null || out.isBlank())
+        return (out == null || out.trim().isEmpty())
             ? 0
             : Integer.parseInt(out.trim());
     }
